src/objects/SalesWeeklyReport__c.object
<CustomObject>
    <fields>
        <fullName>DifferenceNumberThisWeek__c</fullName>
        <label>本周机会变化总数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>User__r.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>大区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>周报结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FourDepartment__c</fullName>
        <formula>Owner:User.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>四级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>唯一值</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewOpportunityThisWeek__c</fullName>
        <label>本周新增机会数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <label>销售机会总数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesAmount__c</fullName>
        <label>预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>周报开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ThreeDepartment__c</fullName>
        <formula>Owner:User.TertiarySector__c</formula>
        <label>三级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售经理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Weekly_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WeekNumberCalc__c</fullName>
        <label>周数计算</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeekNumber__c</fullName>
        <formula>MOD( FLOOR( ( DATEVALUE(  CreatedDate ) - DATEVALUE(&quot;2018-01-01&quot;) ) / 7) ,52) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>周数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>suoyoujiandang__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所有人简档</label>
        <type>Text</type>
    </fields>
    <label>销售周报</label>
    <listViews>
        <fullName>View5</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>User__c</columns>
        <columns>WeekNumber__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>NewOpportunityThisWeek__c</columns>
        <columns>DifferenceNumberThisWeek__c</columns>
        <columns>OpportunityNumber__c</columns>
        <columns>SalesAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>销售周报 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>销售周报</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>